Admin/Styles: prevent the consumer name input overflowing the metabox container

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -253,7 +253,8 @@ body.incassoos-post-view #postdivrich .inside {
 	width: 68%;
 }
 
-.incassoos-object-details label + .detail-wrapper select {
+.incassoos-object-details label + .detail-wrapper select,
+.incassoos-object-details label + .detail-wrapper input {
 	width: 100%;
 }
 
